[metadata]
name = chiahub_monitor
version = 0.0.1
author = Yan Hackl-Feldbusch
author_email = yan@cryptico.io
description = A monitoring utility for chia blockchain
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yan74/chiahub-monitor
project_urls =
    Bug Tracker = https://github.com/yan74/chiahub-monitor/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    chia-blockchain

[options.packages.find]
where = src